corrected spelling mistake

--- a/myfirstwebsite.html
+++ b/myfirstwebsite.html
@@ -53,7 +53,7 @@
         <div class="pictures">
             <div class="box1">
         	<img src="img/Debit_card_ATM.jpg" alt="Debit_card_ATM.jpg. could not be loaded" title="Debit_Card_ATM">
-            <br>Police are Investigating three ATM explosionsin two Florida counties
+            <br>Police are investigating three ATM explosions in two Florida counties
             </div>
         <div class="box1">
         	<img src="img/Taxify-Scooters.jpg" alt="Taxify-Scooters.jpg could not be loaded" title="Taxify-Scooters">
