--- a/myfirstwebsite.html
+++ b/myfirstwebsite.html
@@ -45,7 +45,7 @@
 
         <div id="phone">
             <img src="img/Phone.png" alt="Phone.png could not be loaded" title="Phone">
-            <br>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life
+            <br>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!
         </div>     
 
 
