--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text.html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<title>My first website</title>
+	<title>About me</title>
 </head>
 <body>
 <div class="container">
